--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </div>
         <ul>
           <li>
-            <a href="">
+            <a href="#Home">
               <span><i class="fa-solid fa-house"></i></span>
               <span>Home</span>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a href="#Search">
               <span><i class="fa-solid fa-magnifying-glass"></i></span>
               <span>Search</span>
             </a>
@@ -31,7 +31,7 @@
         </ul>
       </div>
 
-      <div class="sideBar-nav box2">
+      <div class="sideBar-nav-box2">
         <ul>
           <li>
             <a href="">
@@ -99,7 +99,7 @@
       <div class="spotify-piaylist">
         <h2>Trending Song</h2>
         <div class="card">
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/my1.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
@@ -108,7 +108,7 @@
             <p>Tanishk Bagchi.Faheem Abdullah.Arslan Nizami</p>
           </div>
 
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/my5.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
@@ -117,7 +117,7 @@
             <p>Tanishk Bagchi.Faheem Abdullah.Arslan Nizami</p>
           </div>
 
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/my2.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
@@ -126,7 +126,7 @@
             <p>Tanishk Bagchi.Faheem Abdullah.Arslan Nizami</p>
           </div>
 
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/my3.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
@@ -135,7 +135,7 @@
             <p>Tanishk Bagchi.Faheem Abdullah.Arslan Nizami</p>
           </div>
 
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/my4.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
@@ -149,7 +149,7 @@
       <div class="spotify-piaylist">
         <h2>Trending Song</h2>
         <div class="card">
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/item-6.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
@@ -167,7 +167,7 @@
             <p>Tanishk Bagchi.Faheem Abdullah.Arslan Nizami</p>
           </div>
 
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/item-9.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
@@ -176,7 +176,7 @@
             <p>Tanishk Bagchi.Faheem Abdullah.Arslan Nizami</p>
           </div>
 
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/item-10.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
@@ -185,7 +185,7 @@
             <p>Tanishk Bagchi.Faheem Abdullah.Arslan Nizami</p>
           </div>
 
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/item-3.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
