--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <p>Tanishk Bagchi.Faheem Abdullah.Arslan Nizami</p>
           </div>
 
-          <a href="Spotify Clone Back/index.html"><div class="item">
+          <a href="Spotify Clone Back/index-playlist.html"><div class="item">
             <img src="image/item-7.jpg" alt="" />
             <div class="play-btn">
               <span><i class="fa-solid fa-play"></i></span>
