Login form add in website
Login form add in website by aditya

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
           <button><i class="fa-solid fa-angle-left"></i></button>
           <button><i class="fa-solid fa-angle-right"></i></button>
         </div>
-        <div class="login-btn">
-          <button class="Sign-up">Sign up</button>
-          <button class="login">Log in</button>
+        <div class="login-form-btn">
+         <a href="Login-Singup form/index-login.html"><button class="Sign-up">Sign up</button></a>
+         <a href="Login-Singup form/index-login.html"><button class="login">Log in</button></a>
         </div>
       </div>
 
