--- a/Login-Singup form/index-login.html
+++ b/Login-Singup form/index-login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Login &amp; signup form</title>
   <link rel="stylesheet" href="style.css">
-
+  <link rel="icon" href="image/logo.png" />
 </head>
 <body>
 <!-- partial:index.partial.html -->
